--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head><style type="text/css">.lw { font-size: 60px; }</style>
 
-
-<link type="text/css" rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
-<script type="text/javascript" src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
-<link type="text/css" rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.css">
+<meta charset="utf-8">
+<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
+<script type="text/javascript" src="https://getbootstrap.com/dist/js/bootstrap.js"></script>
+<link type="text/css" rel="stylesheet" href="https://getbootstrap.com/dist/css/bootstrap.css">
 <title>HTML5, CSS3 and JavaScript demo</title>
 </head>
 <body>
@@ -20,9 +20,9 @@
        <li class="list-group-item">
     <a href="#three"><i class="fa fa-star-o fa-fw"></i>影評</a><br>
       </li>
-    </div> 
+    </div>
   
-     
+
   <div class="col-md-10">
     <div id="one"><h2>內容簡介</h2>迪亞馬特彗星每逢1200年造訪地球，某天住在東京四谷的少年立花瀧、飛驒深山中糸守鎮的少女宮水三葉，只要睡覺或半夢半醒之際，就會靈魂互換，醒來什麼都不記得，感覺像做了奇妙的夢。但他倆很快意識到這種情形，困惑之中開始在彼此智慧型手機留言或安排行事曆，逐漸地變得習慣於身體切換，並干預對方的生活。三葉不僅樂於所嚮往的東京生活，也幫助瀧更接近其打工的美女學姊奧寺，促成與她約會；而瀧以陽剛的形象，幫助三葉在她的學校更受歡迎。
 三葉（實際是瀧）和妹妹四葉、祖母一起徒步至山上宮水神社的「御神體」，途中祖母告訴她們土地神「結」，可以連結人與時間，因此宮水代代巫女都編織結繩來體現，水酒等進入人體也能形成連結。參拜破火山口型窪地上「隱世」的御神體，並以三葉的口嚼酒為半身獻祭。回程祖母發覺三葉有異。
@@ -40,7 +40,7 @@
 本作是首次採用製作委員會方式的新海誠作品。動畫釋出消息於2015年12月10日在YouTube公開，翌年4月5日則發布了預告片內容。該片上映後連霸日本數週票房冠軍，是目前唯一追上宮崎駿百億日圓票房的日本動畫電影[5]，並斬獲西班牙錫切斯影展最佳動畫長片獎等榮譽。</div>
     </div>
 </div>
-  
-  
+
+
 
 <script>// Write JavaScript here </script></body>
