--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images1.jpg" alt="">
+      <img src="images1.jpg" alt="123">
       <div class="carousel-caption">
 
       </div>
     </div>
     <div class="item">
-      <img src="images.jpg" alt="">
+      <img src="images.jpg" alt="145">
       <div class="carousel-caption">
       </div>
     </div>
