--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="https://getbootstrap.com/dist/js/bootstrap.js"></script>
 <link type="text/css" rel="stylesheet" href="https://getbootstrap.com/dist/css/bootstrap.css">
+<link type="text/css" rel="stylesheet" href="animate.css">
 <title>HTML5, CSS3 and JavaScript demo</title>
 </head>
 <body>
@@ -52,6 +53,8 @@
     <div id="three"><h3>影評</h3>《你的名字》（日語：君の名は。 -your name.-、英語：Your Name）是日本動畫家新海誠所執導；於2016年8月26日在日本公映的動畫電影。影片由田中將賀擔任人物設計、作畫導演為安藤雅司、劇中音樂則由搖滾樂團RADWIMPS負責製作，影星神木隆之介與上白石萌音分別為片中主角配音。
 本作是首次採用製作委員會方式的新海誠作品。動畫釋出消息於2015年12月10日在YouTube公開，翌年4月5日則發布了預告片內容。該片上映後連霸日本數週票房冠軍，是目前唯一追上宮崎駿百億日圓票房的日本動畫電影[5]，並斬獲西班牙錫切斯影展最佳動畫長片獎等榮譽。</div>
     </div>
+</div>
+
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -72,7 +75,7 @@
       <div class="carousel-caption">
       </div>
     </div>
-  </div>
+
 
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
