--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images1.jpg" alt="123">
+      <img src="sky-1016162_960_720.jpg" alt="">
       <div class="carousel-caption">
 
       </div>
     </div>
     <div class="item">
-      <img src="images.jpg" alt="145">
+      <img src="sky-1315328_960_720.jpg" alt="">
       <div class="carousel-caption">
       </div>
     </div>
